--- a/src/App.css
+++ b/src/App.css
@@ -3,5 +3,5 @@
 }
 /*use important as less as possible, like never */
 body {
-  background-color: rgba(0, 255, 255, 0.699);
+  background-color: orangered;
 }
