--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,14 @@
-.change-color {
+/*.change-color {
   background-color: orange !important;
-}
+}*/
 /*use important as less as possible, like never */
-body {
-  background-color: orangered;
+
+main {
+  height: calc(100vh - 56px);
+}
+.hero {
+  background: url("https://source.unsplash.com/dkFJST9zZZo/") no-repeat fixed
+    center center/cover;
+  height: 100%;
+  color: white;
 }
